--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "my-app",
+  "name": "app-project02",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
-    "package": "^1.0.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-elastic-carousel": "^0.11.5",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.6.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
